--- a/blossom-framework/pom.xml
+++ b/blossom-framework/pom.xml
@@ -22,10 +22,13 @@
         如果是业务组件，Maven 名字会包含 biz
     </description>
 
-
     <modules>
         <module>blossom-common</module>
         <module>blossom-spring-boot-starter-banner</module>
+        <module>blossom-spring-boot-starter-web</module>
+        <module>blossom-spring-boot-starter-mybatis</module>
+        <module>blossom-spring-boot-starter-redis</module>
+
         <module>blossom-spring-boot-starter-monitor</module>
     </modules>
 </project>
