--- a/blossom-module-system/blossom-module-system-biz/pom.xml
+++ b/blossom-module-system/blossom-module-system-biz/pom.xml
@@ -3,27 +3,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blossom-framework</artifactId>
+        <artifactId>blossom-module-system</artifactId>
         <groupId>cn.econets.boot</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blossom-spring-boot-starter-banner</artifactId>
+    <artifactId>blossom-module-system-biz</artifactId>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
-    <description>Banner 用于在 console 控制台，打印开发文档、接口文档等</description>
+    <description>
+        system 模块下，我们放通用业务，支撑上层的核心业务。
+        例如说：用户、部门、权限、数据字典等等
+    </description>
 
     <dependencies>
         <dependency>
             <groupId>cn.econets.boot</groupId>
-            <artifactId>blossom-common</artifactId>
+            <artifactId>blossom-module-system-api</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.econets.boot</groupId>
+            <artifactId>blossom-module-infrastructure-api</artifactId>
+            <version>${revision}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+
     </dependencies>
+
 </project>
