--- a/blossom-module-system/blossom-module-system-biz/pom.xml
+++ b/blossom-module-system/blossom-module-system-biz/pom.xml
@@ -102,6 +102,10 @@
             <groupId>cn.econets.boot</groupId>
             <artifactId>blossom-spring-boot-starter-captcha</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.econets.boot</groupId>
+            <artifactId>blossom-spring-boot-starter-biz-ip</artifactId>
+        </dependency>
 
     </dependencies>
 
