--- a/blossom-dependencies/pom.xml
+++ b/blossom-dependencies/pom.xml
@@ -125,6 +125,11 @@
             </dependency>
             <dependency>
                 <groupId>cn.econets.boot</groupId>
+                <artifactId>blossom-spring-boot-starter-biz-ip</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.econets.boot</groupId>
                 <artifactId>blossom-spring-boot-starter-captcha</artifactId>
                 <version>${revision}</version>
             </dependency>
