--- a/blossom-server/src/main/resources/application.yml
+++ b/blossom-server/src/main/resources/application.yml
@@ -105,7 +105,7 @@ application:
     permit-all_urls:
       - /admin-api/open/** # 开放接口，不需要登录
   swagger:
-    title: 快速开发平台
+    title: ${spring.application.name}接口文档
     description: 提供管理后台、用户 App 的所有功能
     version: ${application.info.version}
     url: ${application.web.admin-ui.url}
