--- a/blossom-server/pom.xml
+++ b/blossom-server/pom.xml
@@ -47,6 +47,16 @@
             <artifactId>blossom-spring-boot-starter-monitor</artifactId>
         </dependency>
 
+        <!-- Test 测试相关 -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
