--- a/blossom-server/src/main/resources/application.yml
+++ b/blossom-server/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER # 解决 SpringFox 与 SpringBoot 2.6.x 不兼容的问题，参见 SpringFoxHandlerProviderBeanPostProcessor 类
-#    throw-exception-if-no-handler-found: true # 404 错误时抛出异常，方便统一处理
-#    static-path-pattern: /static/** # 静态资源路径; 注意：如果不配置，则 throw-exception-if-no-handler-found 不生效！！！ TODO 不能配置，会导致 swagger 不生效
+  #    throw-exception-if-no-handler-found: true # 404 错误时抛出异常，方便统一处理
+  #    static-path-pattern: /static/** # 静态资源路径; 注意：如果不配置，则 throw-exception-if-no-handler-found 不生效！！！ TODO 不能配置，会导致 swagger 不生效
 
   # Jackson 配置项
   jackson:
@@ -143,7 +143,8 @@ application:
     base-package: ${application.info.base-package}
     db-schemas: ${spring.datasource.dynamic.datasource.master.name}
     front-type: 10 # 前端模版的类型，参见 CodegenFrontTypeEnum 枚举类
-  tenant: # 多租户相关配置项
+  # 多租户相关配置项
+  tenant:
     enable: true
     ignore-urls:
       - /admin-api/system/tenant/get-id-by-name # 基于名字获取租户，不许带租户编号
@@ -157,6 +158,7 @@ application:
     ignore-tables:
       - system_tenant
       - system_tenant_package
+      - system_tenant_package_menu
       - system_dict_data
       - system_dict_type
       - system_error_code
@@ -198,7 +200,8 @@ application:
       - rep_demo_jianpiao
       - tmp_report_data_1
       - tmp_report_data_income
-  sms-code: # 短信验证码相关的配置项
+  # 短信验证码相关的配置项
+  sms-code:
     expire-times: 10m
     send-frequency: 1m
     send-maximum-quantity-per-day: 10
