--- a/blossom-framework/pom.xml
+++ b/blossom-framework/pom.xml
@@ -29,6 +29,7 @@
         <module>blossom-spring-boot-starter-mybatis</module>
         <module>blossom-spring-boot-starter-redis</module>
         <module>blossom-spring-boot-starter-security</module>
+        <module>blossom-spring-boot-starter-test</module>
 
         <module>blossom-spring-boot-starter-monitor</module>
         <module>blossom-spring-boot-starter-excel</module>
@@ -39,6 +40,7 @@
         <module>blossom-spring-boot-starter-job</module>
 
         <module>blossom-spring-boot-starter-biz-dict</module>
+        <module>blossom-spring-boot-starter-biz-error-code</module>
         <module>blossom-spring-boot-starter-biz-tenant</module>
         <module>blossom-spring-boot-starter-biz-data-permission</module>
         <module>blossom-spring-boot-starter-biz-operatelog</module>
