1.新增脱敏注解

--- a/blossom-dependencies/pom.xml
+++ b/blossom-dependencies/pom.xml
@@ -120,6 +120,11 @@
             </dependency>
             <dependency>
                 <groupId>cn.econets.boot</groupId>
+                <artifactId>yudao-spring-boot-starter-desensitize</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.econets.boot</groupId>
                 <artifactId>blossom-spring-boot-starter-biz-operatelog</artifactId>
                 <version>${revision}</version>
             </dependency>
