--- a/blossom-framework/blossom-spring-boot-starter-biz-data-permission/pom.xml
+++ b/blossom-framework/blossom-spring-boot-starter-biz-data-permission/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>cn.econets.boot</groupId>
             <artifactId>blossom-module-system-api</artifactId>
-            <version>1.0.1</version>
+            <version>${revision}</version>
         </dependency>
 
     </dependencies>
