--- a/blossom-framework/pom.xml
+++ b/blossom-framework/pom.xml
@@ -48,5 +48,6 @@
         <module>blossom-spring-boot-starter-biz-operatelog</module>
         <module>blossom-spring-boot-starter-biz-sms</module>
         <module>blossom-spring-boot-starter-biz-ip</module>
+        <module>blossom-spring-boot-starter-biz-pay</module>
     </modules>
 </project>
