--- a/blossom-module-pay/blossom-module-pay-api/pom.xml
+++ b/blossom-module-pay/blossom-module-pay-api/pom.xml
@@ -3,17 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>blossom-framework</artifactId>
+        <artifactId>blossom-module-pay</artifactId>
         <groupId>cn.econets.boot</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>blossom-spring-boot-starter-biz-operatelog</artifactId>
+    <artifactId>blossom-module-pay-api</artifactId>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
-    <description>操作日志</description>
+    <description>
+        pay 模块 API，暴露给其它模块调用
+    </description>
 
     <dependencies>
         <dependency>
@@ -21,28 +23,11 @@
             <artifactId>blossom-common</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>cn.econets.boot</groupId>
-            <artifactId>blossom-module-system-api</artifactId>
-            <version>${revision}</version>
-        </dependency>
-
-        <!-- Spring 核心 -->
+        <!-- 参数校验 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>cn.econets.boot</groupId>
-            <artifactId>blossom-spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-
     </dependencies>
-
 </project>
