--- a/blossom-server/src/main/resources/application.yml
+++ b/blossom-server/src/main/resources/application.yml
@@ -200,6 +200,8 @@ application:
       - rep_demo_jianpiao
       - tmp_report_data_1
       - tmp_report_data_income
+    ignore-cache:
+      - permission_menu_ids
   # 短信验证码相关的配置项
   sms-code:
     expire-times: 10m
