--- a/blossom-module-pay/blossom-module-pay-biz/pom.xml
+++ b/blossom-module-pay/blossom-module-pay-biz/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>blossom-module-pay</artifactId>
         <groupId>cn.econets.boot</groupId>
-        <version>1.0.1</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
