[修改]优化模块结构

--- a/blossom-framework/blossom-spring-boot-starter-web/pom.xml
+++ b/blossom-framework/blossom-spring-boot-starter-web/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>blossom-module-infrastructure-api</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.econets.boot</groupId>
+            <artifactId>blossom-module-system-api</artifactId>
+            <version>${revision}</version>
+        </dependency>
 
         <!-- Web 相关 -->
         <dependency>
